maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:12: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var x:Int
      ^ShortestPathMaze:12: error: local variables must be initialized
  var x:Int
      ^ShortestPathMaze:13: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var y:Int
      ^ShortestPathMaze:13: error: local variables must be initialized
  var y:Int
      ^ShortestPathMaze:14: error: type mismatch;
 found   : Unit
 required: Int
  for ( x <- 0 to L-1){
          ^